// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RepairsFinderInput Should render input 1`] = `
<DocumentFragment>
  <form>
    <div
      class="govuk-form-group lbh-form-group"
      id="xmlContent-form-group"
    >
      <label
        class="govuk-label lbh-label"
        for="xmlContent"
      >
        Repairs finder code
        <span
          class="govuk-required"
        >
          *
        </span>
      </label>
      <span
        class="govuk-hint lbh-hint"
        id="xmlContent-hint"
      >
        Visit 
        <a
          class="lbh-link"
          rel="noreferrer"
          target="_blank"
        >
          Repairs Finder
        </a>
         to diagnose the repair, then paste the code below.
      </span>
      <textarea
        aria-describedby="xmlContent-hint xmlContent-error"
        class="govuk-textarea lbh-textarea"
        data-testid="xmlContent"
        id="xmlContent"
        name="xmlContent"
        rows="6"
      />
    </div>
    <div />
    <table
      class="govuk-table lbh-table original-tasks-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Trade
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Contractor
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            SOR code
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Quantity
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Priority
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Description
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
      </tbody>
    </table>
    <input
      id="descriptionOfWork"
      name="descriptionOfWork"
      type="hidden"
      value=""
    />
    <input
      id="trade"
      name="trade"
      type="hidden"
      value=""
    />
    <input
      id="tradeCode"
      name="tradeCode"
      type="hidden"
      value=""
    />
    <input
      id="contractor"
      name="contractor"
      type="hidden"
      value="undefined - undefined"
    />
    <input
      id="contractorRef"
      name="contractorRef"
      type="hidden"
      value=""
    />
    <input
      id="rateScheduleItems[0][code]"
      name="rateScheduleItems[0][code]"
      type="hidden"
      value="undefined - undefined - £undefined"
    />
    <input
      id="rateScheduleItems[0][description]"
      name="rateScheduleItems[0][description]"
      type="hidden"
      value=""
    />
    <input
      id="rateScheduleItems[0][cost]"
      name="rateScheduleItems[0][cost]"
      type="hidden"
      value=""
    />
    <input
      id="rateScheduleItems[0][quantity]"
      name="rateScheduleItems[0][quantity]"
      type="hidden"
      value=""
    />
    <input
      id="priorityCode"
      name="priorityCode"
      type="hidden"
      value=""
    />
  </form>
</DocumentFragment>
`;

exports[`RepairsFinderInput Should show details when matching code found 1`] = `
<DocumentFragment>
  <form>
    <div
      class="govuk-form-group lbh-form-group govuk-form-group--error"
      id="xmlContent-form-group"
    >
      <label
        class="govuk-label lbh-label"
        for="xmlContent"
      >
        Repairs finder code
        <span
          class="govuk-required"
        >
          *
        </span>
      </label>
      <span
        class="govuk-hint lbh-hint"
        id="xmlContent-hint"
      >
        Visit 
        <a
          class="lbh-link"
          rel="noreferrer"
          target="_blank"
        >
          Repairs Finder
        </a>
         to diagnose the repair, then paste the code below.
      </span>
      <span
        class="govuk-error-message lbh-error-message"
        data-error-id=""
        data-testid="error-message"
      >
        <span
          class="govuk-visually-hidden"
        >
          Error:
        </span>
         Please enter a code
      </span>
      <textarea
        aria-describedby="xmlContent-hint xmlContent-error"
        class="govuk-textarea lbh-textarea govuk-textarea--error"
        data-testid="xmlContent"
        id="xmlContent"
        name="xmlContent"
        rows="6"
      />
    </div>
    <div />
    <table
      class="govuk-table lbh-table original-tasks-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Trade
          </td>
          <td
            class="govuk-table__cell"
          >
            Plumbing - PL
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Contractor
          </td>
          <td
            class="govuk-table__cell"
          >
            HH General Building Repai
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            SOR code
          </td>
          <td
            class="govuk-table__cell"
          >
            63.78 - Short Description
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Quantity
          </td>
          <td
            class="govuk-table__cell"
          >
            1
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Priority
          </td>
          <td
            class="govuk-table__cell"
          >
            [N] NORMAL
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Description
          </td>
          <td
            class="govuk-table__cell"
          >
            Soem comments blah blah blah blah
          </td>
        </tr>
      </tbody>
    </table>
    <input
      id="descriptionOfWork"
      name="descriptionOfWork"
      type="hidden"
      value="Soem comments blah blah blah blah"
    />
    <input
      id="trade"
      name="trade"
      type="hidden"
      value="Plumbing"
    />
    <input
      id="tradeCode"
      name="tradeCode"
      type="hidden"
      value="PL"
    />
    <input
      id="contractor"
      name="contractor"
      type="hidden"
      value="HH General Building Repai - H01"
    />
    <input
      id="contractorRef"
      name="contractorRef"
      type="hidden"
      value="H01"
    />
    <input
      id="rateScheduleItems[0][code]"
      name="rateScheduleItems[0][code]"
      type="hidden"
      value="11111111 - Short Description - £63.78"
    />
    <input
      id="rateScheduleItems[0][description]"
      name="rateScheduleItems[0][description]"
      type="hidden"
      value="Short Description"
    />
    <input
      id="rateScheduleItems[0][cost]"
      name="rateScheduleItems[0][cost]"
      type="hidden"
      value="63.78"
    />
    <input
      id="rateScheduleItems[0][quantity]"
      name="rateScheduleItems[0][quantity]"
      type="hidden"
      value="1"
    />
    <input
      id="priorityCode"
      name="priorityCode"
      type="hidden"
      value="1"
    />
  </form>
</DocumentFragment>
`;

exports[`RepairsFinderInput Should show error when invalid code 1`] = `
<DocumentFragment>
  <form>
    <div
      class="govuk-form-group lbh-form-group govuk-form-group--error"
      id="xmlContent-form-group"
    >
      <label
        class="govuk-label lbh-label"
        for="xmlContent"
      >
        Repairs finder code
        <span
          class="govuk-required"
        >
          *
        </span>
      </label>
      <span
        class="govuk-hint lbh-hint"
        id="xmlContent-hint"
      >
        Visit 
        <a
          class="lbh-link"
          rel="noreferrer"
          target="_blank"
        >
          Repairs Finder
        </a>
         to diagnose the repair, then paste the code below.
      </span>
      <span
        class="govuk-error-message lbh-error-message"
        data-error-id=""
        data-testid="error-message"
      >
        <span
          class="govuk-visually-hidden"
        >
          Error:
        </span>
         Invalid code format
      </span>
      <textarea
        aria-describedby="xmlContent-hint xmlContent-error"
        class="govuk-textarea lbh-textarea govuk-textarea--error"
        data-testid="xmlContent"
        id="xmlContent"
        name="xmlContent"
        rows="6"
      />
    </div>
    <div />
    <table
      class="govuk-table lbh-table original-tasks-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Trade
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Contractor
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            SOR code
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Quantity
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Priority
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Description
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
      </tbody>
    </table>
    <input
      id="descriptionOfWork"
      name="descriptionOfWork"
      type="hidden"
      value=""
    />
    <input
      id="trade"
      name="trade"
      type="hidden"
      value=""
    />
    <input
      id="tradeCode"
      name="tradeCode"
      type="hidden"
      value=""
    />
    <input
      id="contractor"
      name="contractor"
      type="hidden"
      value="undefined - undefined"
    />
    <input
      id="contractorRef"
      name="contractorRef"
      type="hidden"
      value=""
    />
    <input
      id="rateScheduleItems[0][code]"
      name="rateScheduleItems[0][code]"
      type="hidden"
      value="undefined - undefined - £undefined"
    />
    <input
      id="rateScheduleItems[0][description]"
      name="rateScheduleItems[0][description]"
      type="hidden"
      value=""
    />
    <input
      id="rateScheduleItems[0][cost]"
      name="rateScheduleItems[0][cost]"
      type="hidden"
      value=""
    />
    <input
      id="rateScheduleItems[0][quantity]"
      name="rateScheduleItems[0][quantity]"
      type="hidden"
      value=""
    />
    <input
      id="priorityCode"
      name="priorityCode"
      type="hidden"
      value=""
    />
  </form>
</DocumentFragment>
`;

exports[`RepairsFinderInput Should show error when match not found 1`] = `
<DocumentFragment>
  <form>
    <div
      class="govuk-form-group lbh-form-group govuk-form-group--error"
      id="xmlContent-form-group"
    >
      <label
        class="govuk-label lbh-label"
        for="xmlContent"
      >
        Repairs finder code
        <span
          class="govuk-required"
        >
          *
        </span>
      </label>
      <span
        class="govuk-hint lbh-hint"
        id="xmlContent-hint"
      >
        Visit 
        <a
          class="lbh-link"
          rel="noreferrer"
          target="_blank"
        >
          Repairs Finder
        </a>
         to diagnose the repair, then paste the code below.
      </span>
      <span
        class="govuk-error-message lbh-error-message"
        data-error-id=""
        data-testid="error-message"
      >
        <span
          class="govuk-visually-hidden"
        >
          Error:
        </span>
         Failed to matching SOR code matching 11111111, H01
      </span>
      <textarea
        aria-describedby="xmlContent-hint xmlContent-error"
        class="govuk-textarea lbh-textarea govuk-textarea--error"
        data-testid="xmlContent"
        id="xmlContent"
        name="xmlContent"
        rows="6"
      />
    </div>
    <div />
    <table
      class="govuk-table lbh-table original-tasks-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Trade
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Contractor
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            SOR code
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Quantity
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Priority
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Description
          </td>
          <td
            class="govuk-table__cell"
          >
            -
          </td>
        </tr>
      </tbody>
    </table>
    <input
      id="descriptionOfWork"
      name="descriptionOfWork"
      type="hidden"
      value="Soem comments blah blah blah blah"
    />
    <input
      id="trade"
      name="trade"
      type="hidden"
      value=""
    />
    <input
      id="tradeCode"
      name="tradeCode"
      type="hidden"
      value=""
    />
    <input
      id="contractor"
      name="contractor"
      type="hidden"
      value="undefined - undefined"
    />
    <input
      id="contractorRef"
      name="contractorRef"
      type="hidden"
      value=""
    />
    <input
      id="rateScheduleItems[0][code]"
      name="rateScheduleItems[0][code]"
      type="hidden"
      value="undefined - undefined - £undefined"
    />
    <input
      id="rateScheduleItems[0][description]"
      name="rateScheduleItems[0][description]"
      type="hidden"
      value=""
    />
    <input
      id="rateScheduleItems[0][cost]"
      name="rateScheduleItems[0][cost]"
      type="hidden"
      value=""
    />
    <input
      id="rateScheduleItems[0][quantity]"
      name="rateScheduleItems[0][quantity]"
      type="hidden"
      value="1"
    />
    <input
      id="priorityCode"
      name="priorityCode"
      type="hidden"
      value="1"
    />
  </form>
</DocumentFragment>
`;

exports[`RepairsFinderInput Should show error when no property contract 1`] = `
<DocumentFragment>
  <form>
    <div
      class="govuk-form-group lbh-form-group govuk-form-group--error"
      id="xmlContent-form-group"
    >
      <label
        class="govuk-label lbh-label"
        for="xmlContent"
      >
        Repairs finder code
        <span
          class="govuk-required"
        >
          *
        </span>
      </label>
      <span
        class="govuk-hint lbh-hint"
        id="xmlContent-hint"
      >
        Visit 
        <a
          class="lbh-link"
          rel="noreferrer"
          target="_blank"
        >
          Repairs Finder
        </a>
         to diagnose the repair, then paste the code below.
      </span>
      <span
        class="govuk-error-message lbh-error-message"
        data-error-id=""
        data-testid="error-message"
      >
        <span
          class="govuk-visually-hidden"
        >
          Error:
        </span>
         Repair of this type cannot be raised on this property
      </span>
      <textarea
        aria-describedby="xmlContent-hint xmlContent-error"
        class="govuk-textarea lbh-textarea govuk-textarea--error"
        data-testid="xmlContent"
        id="xmlContent"
        name="xmlContent"
        rows="6"
      />
    </div>
    <div />
    <div
      class="warning-info-box govuk-inset-text lbh-inset-text variant-error govuk-!-margin-bottom-4"
      data-testid="despatched-warning"
    >
      <div
        class="lbh-warning-text govuk-warning-text"
      >
        <span
          aria-hidden="true"
          class="govuk-warning-text__icon"
        >
          !
        </span>
        <div
          class="govuk-warning-text__text"
        >
          <span
            class="govuk-warning-text__assistive"
          >
            Warning
          </span>
          <p
            class="govuk-!-margin-top-0 lbh-body-s lbh-!-font-weight-bold"
          >
            Repair cannot be raised on this property
          </p>
          <p
            class="lbh-body-xs govuk-!-margin-top-1"
          >
            The selected work order cannot be raised against this property. 
          </p>
        </div>
      </div>
    </div>
    <table
      class="govuk-table lbh-table original-tasks-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Trade
          </td>
          <td
            class="govuk-table__cell"
          >
            Plumbing - PL
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Contractor
          </td>
          <td
            class="govuk-table__cell"
          >
            HH General Building Repai
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            SOR code
          </td>
          <td
            class="govuk-table__cell"
          >
            63.78 - Short Description
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Quantity
          </td>
          <td
            class="govuk-table__cell"
          >
            1
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Priority
          </td>
          <td
            class="govuk-table__cell"
          >
            [N] NORMAL
          </td>
        </tr>
        <tr
          class="govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            Description
          </td>
          <td
            class="govuk-table__cell"
          >
            Soem comments blah blah blah blah
          </td>
        </tr>
      </tbody>
    </table>
    <input
      id="descriptionOfWork"
      name="descriptionOfWork"
      type="hidden"
      value="Soem comments blah blah blah blah"
    />
    <input
      id="trade"
      name="trade"
      type="hidden"
      value="Plumbing"
    />
    <input
      id="tradeCode"
      name="tradeCode"
      type="hidden"
      value="PL"
    />
    <input
      id="contractor"
      name="contractor"
      type="hidden"
      value="HH General Building Repai - H01"
    />
    <input
      id="contractorRef"
      name="contractorRef"
      type="hidden"
      value="H01"
    />
    <input
      id="rateScheduleItems[0][code]"
      name="rateScheduleItems[0][code]"
      type="hidden"
      value="11111111 - Short Description - £63.78"
    />
    <input
      id="rateScheduleItems[0][description]"
      name="rateScheduleItems[0][description]"
      type="hidden"
      value="Short Description"
    />
    <input
      id="rateScheduleItems[0][cost]"
      name="rateScheduleItems[0][cost]"
      type="hidden"
      value="63.78"
    />
    <input
      id="rateScheduleItems[0][quantity]"
      name="rateScheduleItems[0][quantity]"
      type="hidden"
      value="1"
    />
    <input
      id="priorityCode"
      name="priorityCode"
      type="hidden"
      value="1"
    />
  </form>
</DocumentFragment>
`;
